# ox

./: .gitignore  Cargo.toml  README.md  diagram.json  justfile  rust-toolchain.toml  wokwi.toml
.cargo/: config.toml
.scm/: config.yaml  remotes.yaml
crates/ox-app/: Cargo.toml
crates/ox-app/src/: logging.rs  main.rs
crates/ox-chip/: Cargo.toml
crates/ox-chip/src/: c3.rs  c6.rs  h2.rs  lib.rs  s3.rs
crates/ox-control/: Cargo.toml
crates/ox-control/src/: filter.rs  lib.rs  pid.rs
crates/ox-hal/: Cargo.toml
crates/ox-hal/src/: encoder.rs  gpio.rs  i2c.rs  lib.rs  mock.rs  motor.rs  pwm.rs  spi.rs
crates/ox-hal/src/real/: gpio.rs  i2c.rs  mod.rs  pwm.rs  spi.rs
crates/ox-kernel/: Cargo.toml
crates/ox-kernel/src/: cap.rs  ipc.rs  lib.rs  supervisor.rs
crates/ox-services/: Cargo.toml
crates/ox-services/src/: comms.rs  compass.rs  gpio.rs  gps.rs  lib.rs  motor.rs  nav.rs  rc.rs  sensor.rs  vehicle.rs
crates/ox-services/tests/: coexistence.rs  comms_integration.rs  rc_integration.rs  timing_integration.rs
crates/ox-sketch/: Cargo.toml  build.rs
crates/ox-sketch-macros/: Cargo.toml
crates/ox-sketch-macros/src/: lib.rs
crates/ox-sketch/examples/: blink.rs  button.rs  rc_car.rs  rc_car_pwm.rs
crates/ox-sketch/src/: gpio.rs  lib.rs  motor.rs  pwm.rs  rc.rs
crates/ox-test/: Cargo.toml
crates/ox-test/src/: fixtures.rs  generators.rs  harness.rs  integration.rs  lib.rs
docs/: docusaurus.config.ts  package-lock.json  sidebars.ts
docs/docs/: intro.md
docs/docs/decisions/: 0001-rust-over-python.md  0002-esp32-chip-selection.md  0003-microkernel-architecture.md  0004-real-time-requirements.md  0005-embassy-async.md  intro.md
docs/docs/design/: esp32-rust-rtos-and-sketch-api.md
docs/docs/getting-started/: installation.md
scripts/: setup-tools.sh
