[workspace]
resolver = "2"
members = [
    "crates/ox-kernel",
    "crates/ox-hal",
    "crates/ox-chip",
    "crates/ox-control",
    "crates/ox-services",
    "crates/ox-test",
    "crates/ox-app",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Ox Contributors"]
repository = "https://github.com/example/ox"

[workspace.dependencies]
# Embassy async runtime
embassy-executor = { version = "0.7", default-features = false }
embassy-time = { version = "0.4", default-features = false }
embassy-sync = { version = "0.7", default-features = false }
embassy-futures = { version = "0.1", default-features = false }

# ESP HAL (using latest compatible versions)
esp-hal = { version = "0.23", default-features = false }
esp-hal-embassy = { version = "0.6", default-features = false, features = ["executors"] }
esp-backtrace = { version = "0.15", default-features = false }
esp-println = { version = "0.13", default-features = false, features = ["log", "uart"] }

# Embedded traits
embedded-hal = "1.0"
embedded-hal-async = "1.0"

# Utilities
heapless = "0.8"
# fixed = "1.28"  # Temporarily disabled due to num-traits nightly compatibility
critical-section = "1.2"
static_cell = "2.1"
defmt = "0.3"
log = "0.4"

# Testing (host-side)
proptest = "1.4"

[profile.dev]
panic = "abort"
opt-level = "z"

[profile.release]
panic = "abort"
opt-level = 3
lto = "fat"
codegen-units = 1
