[package]
name = "ox-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ox robotics microkernel - main application"

[features]
default = ["chip-esp32c3"]
chip-esp32c3 = ["ox-chip/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
chip-esp32c6 = ["ox-chip/esp32c6", "esp-hal/esp32c6", "esp-hal-embassy/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "dual-core"]
chip-esp32h2 = ["ox-chip/esp32h2", "esp-hal/esp32h2", "esp-hal-embassy/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]
dual-core = ["ox-kernel/dual-core"]
wifi = ["ox-services/wifi", "dep:esp-wifi", "dep:esp-alloc", "dep:embassy-net", "dep:smoltcp", "esp-wifi/wifi", "esp-wifi/esp32c3"]
ble = ["dep:esp-wifi", "dep:esp-alloc", "esp-wifi/ble", "esp-wifi/esp32c3"]
rc = ["ox-services/rc"]  # RC receiver (SBUS, CRSF)

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-hal = { path = "../ox-hal", features = ["mock"] }
ox-chip = { path = "../ox-chip" }
ox-control = { path = "../ox-control" }
ox-services = { path = "../ox-services" }

# Embassy
embassy-executor = { workspace = true, features = ["task-arena-size-32768"] }
embassy-time.workspace = true
embassy-sync.workspace = true

# ESP HAL
esp-hal.workspace = true
esp-hal-embassy.workspace = true
esp-backtrace = { workspace = true, features = ["exception-handler", "panic-handler", "println"] }
esp-println.workspace = true

# Utilities
static_cell.workspace = true
critical-section.workspace = true
log.workspace = true
heapless.workspace = true
embedded-io-async = "0.6"

# WiFi/BLE (optional)
esp-wifi = { workspace = true, optional = true }
esp-alloc = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true }
smoltcp = { workspace = true, optional = true, features = ["proto-ipv4", "socket-tcp", "socket-udp"] }
