[package]
name = "ox-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ox robotics microkernel - main application"

[features]
default = ["chip-esp32c3"]
chip-esp32c3 = ["ox-chip/esp32c3", "ox-hal/esp32c3", "esp-hal/esp32c3", "esp-hal-embassy/esp32c3", "esp-backtrace/esp32c3", "esp-println/esp32c3"]
chip-esp32c6 = ["ox-chip/esp32c6", "ox-hal/esp32c6", "esp-hal/esp32c6", "esp-hal-embassy/esp32c6", "esp-backtrace/esp32c6", "esp-println/esp32c6", "esp32c6-dual"]
chip-esp32h2 = ["ox-chip/esp32h2", "ox-hal/esp32h2", "esp-hal/esp32h2", "esp-hal-embassy/esp32h2", "esp-backtrace/esp32h2", "esp-println/esp32h2"]
chip-esp32s3 = ["ox-chip/esp32s3", "ox-hal/esp32s3", "esp-hal/esp32s3", "esp-hal-embassy/esp32s3", "esp-backtrace/esp32s3", "esp-println/esp32s3", "esp32s3-dual"]
esp32c6-dual = ["ox-kernel/esp32c6-dual"]
esp32s3-dual = ["ox-kernel/esp32s3-dual"]
chip-esp32s3-psram = ["chip-esp32s3", "ox-chip/esp32s3-psram", "esp-hal/octal-psram"]

# WiFi/BLE features (chip-specific)
# esp-wifi/esp-alloc provides heap allocation symbols and global allocator
wifi = ["ox-services/wifi", "dep:esp-wifi", "dep:embassy-net", "dep:smoltcp", "esp-wifi/wifi", "esp-wifi/esp32c3", "esp-wifi/esp-alloc"]
ble = ["dep:esp-wifi", "esp-wifi/ble", "esp-wifi/esp32c3", "esp-wifi/esp-alloc"]
wifi-s3 = ["ox-services/wifi", "dep:esp-wifi", "dep:embassy-net", "dep:smoltcp", "esp-wifi/wifi", "esp-wifi/esp32s3", "esp-wifi/esp-alloc"]
ble-s3 = ["dep:esp-wifi", "esp-wifi/ble", "esp-wifi/esp32s3", "esp-wifi/esp-alloc"]
rc = ["ox-services/rc"]  # RC receiver (SBUS, CRSF)
gps = ["ox-services/gps"]  # GPS receiver (NMEA, UBX)
compass = ["ox-services/compass"]  # Compass/magnetometer
nav = ["ox-services/nav", "gps", "compass"]  # Autonomous waypoint navigation
vehicle = ["ox-services/vehicle"]  # Vehicle state machine

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-hal = { path = "../ox-hal", features = ["mock"] }
ox-chip = { path = "../ox-chip" }
ox-control = { path = "../ox-control" }
ox-services = { path = "../ox-services" }

# Embassy
embassy-executor = { workspace = true, features = ["task-arena-size-32768"] }
embassy-time.workspace = true
embassy-sync.workspace = true

# ESP HAL
esp-hal.workspace = true
esp-hal-embassy.workspace = true
esp-backtrace = { workspace = true, features = ["exception-handler", "panic-handler", "println"] }
esp-println.workspace = true

# Utilities
static_cell.workspace = true
critical-section.workspace = true
defmt.workspace = true
heapless.workspace = true
embedded-io-async = "0.6"

# WiFi/BLE (optional) - esp-alloc is pulled in via esp-wifi/esp-alloc feature
esp-wifi = { workspace = true, optional = true }
embassy-net = { workspace = true, optional = true }
smoltcp = { workspace = true, optional = true, features = ["proto-ipv4", "socket-tcp", "socket-udp"] }

# I2C frequency helpers (for compass)
fugit = "0.3"
