[package]
name = "ox-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ox microkernel core - IPC, capabilities, scheduler"

[features]
default = []
esp32c6-dual = []    # Enable C6 dual-core support (HP/LP heterogeneous)
esp32s3-dual = []    # Enable S3 dual-core support (symmetric LX7)
std = []             # Enable std for host testing

[dependencies]
embassy-sync.workspace = true
embassy-time.workspace = true
embassy-executor = { workspace = true, optional = true }
critical-section.workspace = true
heapless.workspace = true
static_cell.workspace = true
defmt = { workspace = true, optional = true }
portable-atomic = { version = "1.6", default-features = false }

[dev-dependencies]
proptest.workspace = true
futures = "0.3"
tokio = { version = "1", features = ["rt", "macros", "time", "sync"] }
critical-section = { version = "1.2", features = ["std"] }
