[package]
name = "ox-services"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ox microkernel servers - motor, sensor, GPIO, comms"

[features]
default = []
wifi = ["dep:embassy-net", "dep:smoltcp"]
ble = []
rc = []  # RC receiver support (SBUS, CRSF, IBUS, PPM)
can = []

[dependencies]
ox-kernel = { path = "../ox-kernel" }
ox-hal = { path = "../ox-hal" }
ox-control = { path = "../ox-control" }
embassy-sync.workspace = true
embassy-time.workspace = true
heapless.workspace = true
libm = "0.2"

# WiFi/networking (optional)
embassy-net = { workspace = true, optional = true }
smoltcp = { workspace = true, optional = true }

[dev-dependencies]
ox-hal = { path = "../ox-hal", features = ["mock"] }
proptest.workspace = true
