[package]
name = "ox-sketch-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for ox-sketch Arduino-like API"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "parsing"] }
